# reachy-health-server

./: .gitignore  README.md  alembic.ini  commit.sh  compose.yml  create_bucket.py  pyproject.toml  sagemaker-notebook.ipynb
alembic/: env.py
alembic/versions/: 9152dbed4df4_init_tables.py  add_consultations_table.py  c0a83e94e061_create_chats_and_attachments_tables.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: alerts.py  cases.py  consultation_summary.py  consultations.py  files.py  patients.py  rag.py  visits.py
app/core/: config.py  db.py  models.py
app/schemas/: agentic.py  alert.py  case.py  consultation.py  file.py  patient.py  visit.py
app/services/: consultation.py  file_processor.py  s3_service.py  search_service.py  semantic_search_service.py  transcription_service.py
app/services/agentic/: document_loader.py  embeddings_factory.py  rag_pipeline_service.py  vector_store.py
app/services/consultation/: service.py
